--- a/index.html
+++ b/index.html
@@ -3,18 +3,33 @@
   <head>
 	  <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title> Papai </title>
+		<title> Miguinha </title>
 		<link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
-    <h1>__Daniely__</h1>
+    <h1>--------------------------------------------------------------------------------DANIELY-------------------------------------------------------------------------------------</h1>
     <p>Oi mo
         Como vc ta?
         Divando sempre né?
         lov u, e vc já sabe de tudo ❤
         Te adoro
-    </p>
+</p>
+    <p>🌸 Para minha querida amiga Daniely 🌸
+</p>
+<p>Dani, ter você na minha vida é como ter um raio de sol constante iluminando até os dias mais nublados. Sua presença traz paz, sua risada espalha alegria, e seu coração bondoso inspira todos ao seu redor.
+
+Você é aquele tipo raro de pessoa que transforma o simples em especial, que escuta com o coração e que sempre tem uma palavra certa para oferecer. Amiga como você é presente valioso que a vida me deu — e por isso sou eternamente grata.
+
+Que seus dias sejam sempre preenchidos com amor, sorrisos verdadeiros e sonhos realizados. Você merece tudo de mais lindo que existe no mundo. 💖
+</p>
+
+<p> 
+
+  -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+
+</p>
+
 		<br>
-		<p>Assinado: _Seu_nome_completo_</p>
+		<p>Assinado:Ana Paula Souza Carvalho</p>
   </body>
 </html>
